--- a/history
+++ b/history
@@ -1,2 +1,6 @@
 20190626 sudo apt install mindmaster xmind-zen
+20190630 sudo apt install latexmk
+20190630 sudo apt install clipit
+20190701 sudo apt install alacritty
+20190701 sudo apt remove clipit
 
