--- a/history
+++ b/history
@@ -3,4 +3,4 @@
 20190630 sudo apt install clipit
 20190701 sudo apt install alacritty
 20190701 sudo apt remove clipit
-
+20190817 sudo apt install lxappearence
